--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
+rich
+requests==2.27.1
 Flask==2.0.3
+Werkzeug==2.2.2
 requests==2.27.1
 scikit-learn==1.0.2
 numpy==1.21.5
 tqdm==4.63.0
-torch==1.9.0
-rich==12.0.0
-tqdm==4.63.0
-pytorch-lightning==1.5.0
+torch==2.2.0
+lightning==2.1.4
 transformers==4.11.3
-
+wandb
+matplotlib
